# Automatic-Differentiator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml  test.yml
automaticdifferentiationTeam08/: README.md
docs/: README.md  documentation.ipynb  milestone1.md  milestone2.md  milestone2_progess.md
src/automaticdifferentiationTeam08/: README.md  __init__.py  forwardmode.py  newton.py  reversemode.py
src/automaticdifferentiationTeam08.egg/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: README.md  test_automaticdifferentiation.py  test_forwardmode.py  test_newton.py  test_reversemode.py
